--- a/frontend/src/app/components/finalizingformview/finalizingformview.component.html
+++ b/frontend/src/app/components/finalizingformview/finalizingformview.component.html
@@ -1,50 +1,124 @@
 <app-navbar></app-navbar>
+<div class="mt-5"></div>
 <div class="wrapper">
-  <div class="page-header" style="background-image: url('assets/img/bg5.jpg');">
-    <div class="container mt-5">
+  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
+    <div class=" container">
       <div class="row">
-
-        <!-- Finalizing form -->
-        <div class="col-md-4 mr-auto mt-5">
-          <div class="card" style=" width: 70rem;">
-            <div class="mt-2">
-              <h3 class="card-title">Finalizing Form</h3>
-            </div>
-            <div class="data">
-              <h5>User ID : {{broadcastData?.broadcasts[0]._id}}</h5>
-              <h5>Product : {{broadcastData?.broadcasts[0].product}}</h5>
-              <h5>Category: {{broadcastData?.broadcasts[0].category}}</h5>
-              <h5>Tags : {{broadcastData?.broadcasts[0].tags}}</h5>
-            </div>
-
-            <div class="card-body">
-              <form class="form-group" [formGroup]="finalizingForm">
-                <div class="mt-2">
-                  <div class="form-group"><label>Price</label>
-                    <input [(ngModel)]="price" formControlName="price" class="form-control border-input"
-                      placeholder="Enter the price" type="number">
-                  </div>
-                </div>
-                <div class="mt-3">
-                  <div class="content"><label>Message</label>
-                    <textarea _ngcontent-c15="" class="form-control" cols="80" rows="2" spellcheck="false"
-                      [(ngModel)]="textMessage" formControlName="textMessage">
-                    </textarea>
-                  </div>
-                </div>
-
-                <div class="footer text-center">
-                  <a class="btn btn-primary btn-round btn-lg btn-block" (click)="sendBroadcast()">Send</a>
-                </div>
-
-              </form>
-            </div>
+        <div class=" col-md-12 col-sm-12">
+          <div class="mt-5">
+            <h5>Product Name : {{itemDetails?.item[0].product}}</h5>
+            <h5>Product Id : {{itemDetails?.item[0]._id}}</h5>
+            <h5>Product Category : {{itemDetails?.item[0].category}}</h5>
+            <h5>Product Tags : {{itemDetails?.item[0].tags}}</h5>
           </div>
         </div>
-        <!-- /Finalizing form -->
-
-
       </div>
     </div>
   </div>
+
+  <!-- Selling -->
+  <div class="mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-2">
+          <div class="card text-center" style=" width: 70rem;">
+            <div class="col-md-12">
+              <!-- Broadcast Table -->
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="container">
+                      <div class="row">
+
+                        <div class="ml-auto">
+                          <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
+                            More</a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <form>
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
+                            <th scope="col">Finalize</th>
+                            <th scope="col">Remove</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+
+                          <tr *ngFor="let x of finalizingForms?.item">
+                            <ng-template [ngIf]="x.product == itemDetails?.item[0].product">
+                              <td>{{x.productId}}</td>
+                              <a routerLink="/userprofile/search/{{x.username}}">
+                                <td>{{x.product}}</td>
+                              </a>
+                              <td>
+                                <div class="social-description">
+                                  <a class="btn btn-primary btn-sm"
+                                    routerLink="/userprofile/acceptfinalize/{{x.productId}}">F</a>
+                                </div>
+                              </td>
+                              <td>
+                                <div class="social-description">
+                                  <a href="#button" class="btn btn-primary btn-sm"><i
+                                      class="now-ui-icons ui-1_simple-remove"></i></a>
+                                </div>
+                              </td>
+                            </ng-template>
+                          </tr>
+
+                        </tbody>
+                      </table>
+                    </form>
+
+                  </div>
+                </div>
+              </div>
+              <!-- /Broadcast Table -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <footer class="footer footer-default">
+    <div class="container">
+      <nav>
+        <ul>
+          <li>
+            <a href="https://www.creative-tim.com">
+              Creative Tim
+            </a>
+          </li>
+          <li>
+            <a href="https://www.creative-tim.com/about-us">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="http://blog.creative-tim.com">
+              Blog
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
+              MIT License
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright">
+        &copy;
+        {{data | date: 'yyyy'}}, Designed by
+        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+      </div>
+    </div>
+  </footer>
 </div>
