--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -41,160 +41,129 @@
   </div>
 
 
-  <!-- Broadcast Table -->
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="">
-              <h3>Recent Broadcasts</h3>
-            </div>
-            <div class="ml-auto">
-              <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View More</a>
-            </div>
-          </div>
-          <form>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                  <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                  <th scope="col">Replies</th>
-                  <th scope="col">Finalizing Forms</th>
-                  <th scope="col">Remove</th>
 
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let x of broadcastArray?.broadcast.slice(0,5)">
-                  <td>{{x._id | slice:-4}}</td>
-                  <td>{{x.product}}</td>
-                  <td scope="row">{{x.tags}}</td>
-                  <td scope="row">
-                    <div class="social-description">
-                      <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"
-                        routerLink="/userprofile/sellerreply/{{x._id}}">R</a>
-                    </div>
-                  </td>
-                  <td scope="row">
-                    <div class="social-description">
-                      <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"
-                        routerLink="/userprofile/sellerreply/{{x._id}}">F</a>
-                    </div>
-                  </td>
-                  <td scope="row">
-                    <div class="social-description">
-                      <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"><i
-                          class="now-ui-icons ui-1_simple-remove"></i></a>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="d-flex justify-content-between p-2">
-            </div>
-          </form>
-        </div>
-        <div class="social-description">
-          <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/admin">Admin profile test</a>
-          <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/sellerview">Seller view test</a>
 
-        </div>
-      </div>
-    </div>
-  </div>
+
   <!-- /Broadcast Table -->
+  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
+    <div class="text-center container">
 
-
-
-  <!-- Recent Table -->
-  <div class="section">
-    <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h3>Recent Purchases</h3>
-          <form>
-            <div class="form-group form-inline">
-              Search <input class="form-control ml-2" type="text" name="searchTerm">
 
+        <div class=" col-md-12 col-sm-12">
+          <div class="mt-4">
+            <h3>Recent Broadcasts Received</h3>
+          </div>
+
+          <div class="mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3 col-sm-2">
+                  <div class="card text-center" style=" width: 65rem;">
+                    <div class="col-md-12">
+                      <!-- Broadcast Table -->
+                      <div class="container">
+                        <div class="col-md-12">
+                          <div class="row">
+                            <div class="ml-auto">
+                              <a class="btn btn-sm btn-primary btn-sm " routerLink="/userprofile/broadcast">View
+                                More</a>
+                            </div>
+                          </div>
+                          <form>
+                            <table class="table table-striped">
+                              <thead>
+                                <tr>
+                                  <th scope="col">ID</th>
+                                  <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
+                                  <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                  <th scope="col">Replies</th>
+                                  <th scope="col">Finalizing Forms</th>
+                                  <th scope="col">Remove</th>
+
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let x of broadcastArray?.broadcast.slice(0,5)">
+                                  <td>{{x._id | slice:-4}}</td>
+                                  <td>{{x.product}}</td>
+                                  <td scope="row">{{x.tags}}</td>
+                                  <td scope="row">
+                                    <div class="social-description">
+                                      <a href="#button" class="btn btn-primary btn-lg  btn-sm"
+                                        routerLink="/userprofile/sellerreply/{{x._id}}">R</a>
+                                    </div>
+                                  </td>
+                                  <td scope="row">
+                                    <div class="social-description">
+                                      <a href="#button" class="btn btn-primary btn-lg btn-sm"
+                                        routerLink="/userprofile/finalizingformview/{{x._id}}">F</a>
+                                    </div>
+                                  </td>
+                                  <td scope="row">
+                                    <div class="social-description">
+                                      <a href="#button" class="btn btn-primary btn-lg btn-sm"><i
+                                          class="now-ui-icons ui-1_simple-remove"></i></a>
+                                    </div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <div class="d-flex justify-content-between p-2">
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                      <!-- /Broadcast Table -->
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">Number</th>
-                  <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
-                  <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                  <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                  <th scope="col">Finalize</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                </tr>
-              </tbody>
-            </table>
-
-            <div class="d-flex justify-content-between p-2">
 
 
-              <!-- <select class="custom-select" style="width: auto" name="pageSize"
-                                [(ngModel)]="service.pageSize">
-                                <option [ngValue]="2">2 items per page</option>
-                                <option [ngValue]="4">4 items per page</option>
-                                <option [ngValue]="6">6 items per page</option>
-                            </select> -->
-            </div>
-
-          </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- /Recent Table -->
 
 
-  <footer class="footer footer-default">
-    <div class="container">
-      <nav>
-        <ul>
-          <li>
-            <a href="https://www.creative-tim.com">
-              Creative Tim
-            </a>
-          </li>
-          <li>
-            <a href="https://www.creative-tim.com/about-us">
-              About Us
-            </a>
-          </li>
-          <li>
-            <a href="http://blog.creative-tim.com">
-              Blog
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-              MIT License
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright">
-        &copy;
-        {{data | date: 'yyyy'}}, Designed by
-        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+
+
+
+    <footer class="footer footer-default">
+      <div class="container">
+        <nav>
+          <ul>
+            <li>
+              <a href="https://www.creative-tim.com">
+                Creative Tim
+              </a>
+            </li>
+            <li>
+              <a href="https://www.creative-tim.com/about-us">
+                About Us
+              </a>
+            </li>
+            <li>
+              <a href="http://blog.creative-tim.com">
+                Blog
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
+                MIT License
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="copyright">
+          &copy;
+          {{data | date: 'yyyy'}}, Designed by
+          <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+        </div>
       </div>
-    </div>
-  </footer>
-</div>
+    </footer>
+  </div>
